# connek-food

./: .env.example  .gitignore  .mcp.json  .vercelignore  CLAUDE.md  Makefile  README.md  package.json  requirements.txt  vercel.json
.github/: CLAUDE.md
.github/workflows/: ci.yml  shared-sync.yml  test-tenancy.yml
api/: CLAUDE.md  index.py
backend/: CLAUDE.md  pyproject.toml
backend/alembic/: CLAUDE.md
backend/api/: CLAUDE.md  _template.py.skeleton  admin.py  ai.py  billing.py  clients.py  communications.py  floor.py  health.py  identity.py  internal_cron.py  reservations.py  restaurants.py  reviews.py  staff.py  waitlist.py
backend/scripts/: CLAUDE.md
backend/src/: CLAUDE.md
backend/src/contexts/: CLAUDE.md
backend/src/contexts/admin/: CLAUDE.md
backend/src/contexts/ai/: CLAUDE.md
backend/src/contexts/billing/: CLAUDE.md
backend/src/contexts/clients/: CLAUDE.md
backend/src/contexts/communications/: CLAUDE.md
backend/src/contexts/floor/: CLAUDE.md
backend/src/contexts/identity/: CLAUDE.md
backend/src/contexts/identity/application/: use_cases.py
backend/src/contexts/identity/domain/: entities.py  errors.py  repositories.py
backend/src/contexts/identity/infrastructure/: models.py  repositories.py
backend/src/contexts/identity/interface/: dependencies.py  dtos.py  router.py
backend/src/contexts/reservations/: CLAUDE.md
backend/src/contexts/restaurants/: CLAUDE.md
backend/src/contexts/reviews/: CLAUDE.md
backend/src/contexts/staff/: CLAUDE.md
backend/src/contexts/waitlist/: CLAUDE.md
backend/src/shared/: CLAUDE.md  errors.py  settings.py  telemetry.py
backend/src/shared/auth/: dependencies.py  jwt.py  tenant.py
backend/src/shared/db/: base.py  session.py
backend/tests/: CLAUDE.md
desktop/: CLAUDE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src/: App.tsx  CLAUDE.md  index.css  (+1 more)
shared/: CLAUDE.md
supabase/: CLAUDE.md
(+13 files in other folders)
