[project]
name = "connek-backend"
version = "0.1.0"
description = "Connek Restaurant OS — FastAPI backend"
readme = "../README.md"
requires-python = ">=3.13"
authors = [{ name = "Connek", email = "dev@connek.ca" }]

dependencies = [
    # Web framework
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32",
    # Validation & settings
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "asyncpg>=0.30",
    # Auth — Supabase JWT validation
    "pyjwt[crypto]>=2.9",
    "cryptography>=43.0",
    # External services (lazy-imported by each context — listados aquí para uv lock)
    "supabase>=2.10",
    "openai>=1.50",
    "twilio>=9.3",
    "resend>=2.4",
    "stripe>=11.2",
    # Observability
    "sentry-sdk[fastapi]>=2.18",
    # HTTP client
    "httpx>=0.27",
    # Templating (email/SMS bodies)
    "jinja2>=3.1",
    "python-multipart>=0.0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.7",
    "mypy>=1.13",
    "ipython>=8.27",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "C4"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
